--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   :root{
     --hbcu-gold:#F5C26B;
     --hbcu-green:#0A3B36;
-    --hbcu-maroon:#7A0B0B;
-    --parchment:#F6EFE3;
+    --hbcu-maroon:#7A0B0B;   
+  --hbcu-maroons: #7b1113; /* matches your red background */
+  --hbcu-golds: #f4c542;  /* matches your card yellow */
+   --parchment:#F6EFE3;
     --ink:#0f2b25;
     --ink-soft:#29423d;
     --light:#ffffff;
@@ -341,7 +343,13 @@
       <div class="hero">
         <div class="copy">
           <h2>Culturally rooted ABC flashcards that celebrate heritage, language, and identity.</h2>
-          <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
+          <h2>
+  Culturally rooted ABC flashcards that celebrate 
+  <span style="color: var(--hbcu-maroons);">heritage</span>, 
+  <span style="color: var(--hbcu-golds);">language</span>, 
+  and <span style="color: #000;">identity</span>.
+</h2>        
+    <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
         </div>
         <div class="fan-stage">
           <div class="fan">
