--- a/index.html
+++ b/index.html
@@ -342,9 +342,7 @@
     <div class="hero-wrap">
       <div class="hero">
         <div class="copy">
-          <h2>Culturally rooted ABC flashcards that celebrate heritage, language, and identity.</h2>
-          <h2>
-  Culturally rooted ABC flashcards that celebrate 
+          <h2>Culturally rooted ABC flashcards that celebrate heritage, language, and identity.
   <span style="color: var(--hbcu-maroons);">heritage</span>, 
   <span style="color: var(--hbcu-golds);">language</span>, 
   and <span style="color: #000;">identity</span>.
