--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     --hbcu-gold:#F5C26B;
     --hbcu-green:#0A3B36;
     --hbcu-maroon:#7A0B0B;   
-  --hbcu-maroons: #7b1113; /* matches your red background */
-  --hbcu-golds: #f4c542;  /* matches your card yellow */
+  --hbcu-maroons: #7b1113;   /* matches your red background */
+  --hbcu-golds: #f2b800;     /* deeper, stronger gold for language */
    --parchment:#F6EFE3;
     --ink:#0f2b25;
     --ink-soft:#29423d;
@@ -348,11 +348,12 @@
     <div class="hero-wrap">
       <div class="hero">
         <div class="copy">
-          <h2>
-  Culturally rooted ABC flashcards that celebrate
-  <span class="hl hl-maroon">heritage</span>, 
-  <span class="hl hl-gold">language</span>, and 
-  <span class="hl hl-black">identity</span>.
+         <h2>
+  Culturally rooted ABC flashcards that celebrate 
+  <span style="color: var(--hbcu-maroons); text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">heritage</span>, 
+  <span style="color: var(--hbcu-golds); text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">language</span>, 
+  and 
+  <span style="color: #000; text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">identity</span>.
 </h2>
     <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
         </div>
