--- a/index.html
+++ b/index.html
@@ -350,10 +350,34 @@
         <div class="copy">
         <h2>
   Culturally rooted ABC flashcards that celebrate 
-  <span style="color: var(--hbcu-maroons); text-shadow: 0.5px 0.5px 1.5px rgba(0,0,0,0.25);">heritage</span>, 
-  <span style="color: var(--hbcu-golds); text-shadow: 0.5px 0.5px 1.5px rgba(0,0,0,0.25);">language</span>, 
+  <span style="color: var(--hbcu-maroons);
+               text-shadow: 
+                 -0.5px -0.5px 0 #fff,
+                  0.5px -0.5px 0 #fff,
+                 -0.5px  0.5px 0 #fff,
+                  0.5px  0.5px 0 #fff,
+                  1px 1px 2px rgba(0,0,0,0.25);">
+    heritage
+  </span>, 
+  <span style="color: var(--hbcu-golds);
+               text-shadow: 
+                 -0.5px -0.5px 0 #fff,
+                  0.5px -0.5px 0 #fff,
+                 -0.5px  0.5px 0 #fff,
+                  0.5px  0.5px 0 #fff,
+                  1px 1px 2px rgba(0,0,0,0.25);">
+    language
+  </span>, 
   and 
-  <span style="color:#000; text-shadow: 0.5px 0.5px 1.5px rgba(0,0,0,0.25);">identity</span>.
+  <span style="color:#000;
+               text-shadow: 
+                 -0.5px -0.5px 0 #fff,
+                  0.5px -0.5px 0 #fff,
+                 -0.5px  0.5px 0 #fff,
+                  0.5px  0.5px 0 #fff,
+                  1px 1px 2px rgba(0,0,0,0.25);">
+    identity
+  </span>.
 </h2>
     <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
         </div>
