--- a/index.html
+++ b/index.html
@@ -348,13 +348,38 @@
     <div class="hero-wrap">
       <div class="hero">
         <div class="copy">
-        <h2>
+    <h2>
   Culturally rooted ABC flashcards that celebrate 
-  <span style="color: var(--hbcu-maroons); text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">heritage</span>, 
-  <span style="color: #f2b800; text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">language</span>, 
+  <span style="color: var(--hbcu-maroons);
+               text-shadow: 
+                 -0.35px -0.35px 0 #fff,
+                  0.35px -0.35px 0 #fff,
+                 -0.35px  0.35px 0 #fff,
+                  0.35px  0.35px 0 #fff,
+                  0.6px 0.6px 1.2px rgba(0,0,0,0.25);">
+    heritage
+  </span>, 
+  <span style="color: var(--hbcu-golds);
+               text-shadow: 
+                 -0.35px -0.35px 0 #fff,
+                  0.35px -0.35px 0 #fff,
+                 -0.35px  0.35px 0 #fff,
+                  0.35px  0.35px 0 #fff,
+                  0.6px 0.6px 1.2px rgba(0,0,0,0.25);">
+    language
+  </span>, 
   and 
-  <span style="color: #000; text-shadow: 1px 2px 4px rgba(0,0,0,0.35);">identity</span>.
+  <span style="color:#000;
+               text-shadow: 
+                 -0.35px -0.35px 0 #fff,
+                  0.35px -0.35px 0 #fff,
+                 -0.35px  0.35px 0 #fff,
+                  0.35px  0.35px 0 #fff,
+                  0.6px 0.6px 1.2px rgba(0,0,0,0.25);">
+    identity
+  </span>.
 </h2>
+
     <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
         </div>
         <div class="fan-stage">
