--- a/index.html
+++ b/index.html
@@ -348,9 +348,10 @@
     <div class="hero-wrap">
       <div class="hero">
         <div class="copy">
-    <h2>
+    <h2 style="letter-spacing:-0.5px;">
   Culturally rooted ABC flashcards that celebrate 
   <span style="color: var(--hbcu-maroons);
+               white-space:nowrap;
                text-shadow: 
                  -0.35px -0.35px 0 #fff,
                   0.35px -0.35px 0 #fff,
@@ -360,6 +361,7 @@
     heritage
   </span>, 
   <span style="color: var(--hbcu-golds);
+               white-space:nowrap;
                text-shadow: 
                  -0.35px -0.35px 0 #fff,
                   0.35px -0.35px 0 #fff,
@@ -370,6 +372,7 @@
   </span>, 
   and 
   <span style="color:#000;
+               white-space:nowrap;
                text-shadow: 
                  -0.35px -0.35px 0 #fff,
                   0.35px -0.35px 0 #fff,
@@ -379,7 +382,6 @@
     identity
   </span>.
 </h2>
-
     <p>ABC University introduces little learners to letters, ASL hand signs, and culturally rich images that reflect who they are. Representation matters from the start — making learning joyful, inclusive, and empowering.</p>
         </div>
         <div class="fan-stage">
