--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ form button {
 
 /* 2) If you're using your original <div class="cta"> with input + button */
 .cta-band .cta{
-  display: flex !important;              /* override inline style if present */
+  display: flex;              /* override inline style if present */
   flex-direction: column;
   align-items: center;
   gap: 8px;                              /* << controls space between input & button */
