--- a/index.html
+++ b/index.html
@@ -113,6 +113,28 @@ form button {
   .cta-band{ padding: 26px 16px 26px; }
   .cta-band .cta, .cta-band form{ gap: 6px; margin-top: 10px; }
 }  
+.cta-band{
+  padding: 20px 16px;   /* tighter top/bottom */
+}
+
+.cta-band form{
+  gap: 6px;             /* tighter gap between input & button */
+  margin-top: 8px;      /* less space above */
+}
+.cta-band button {
+  background: #0A3B36;   /* hbcu green */
+  color: #fff !important;
+  padding: 12px 16px;
+  border-radius: 12px;
+  font-weight: 800;
+  cursor: pointer;
+  box-shadow: 0 6px 0 rgba(0,0,0,0.2);
+}
+
+.cta-band button:hover {
+  background: #09432e;   /* darker green on hover */
+  color: #fff !important;
+}
   header{
     background:linear-gradient(180deg, var(--hbcu-gold), #FFE8B6);
     border-bottom:3px solid #e5c987;
